--- a/index1.html
+++ b/index1.html
@@ -8,20 +8,23 @@
     <title>Document</title>
 </head>
 <body>
-    <table>
-      <caption>
-        hello jurassic world museum.
-      </caption>
-      ...
-    </table>
-    <table>
-        <caption>
-            firstline. second line. third line.
-        </caption>
+  <textarea name="" id="" cols="" rows="" placeholder="Demo: click inside me (or tab to me) to focus"></textarea>
 
-    </table>
 
-   
-   
+  <a href="#">Click Me</a>
+  <button>Clicked</button>
+
+  <article>
+    <p>First paragraph...</p>
+    <p>Lorem ipsum...</p>
+    <p>Dolor sit amet...</p>
+    <p>Consectetur adipisicing...</p>
+  </article>
+
+  <body>
+    <div> Let's <span class="emojify">emojify</span>this span!</div>
+  </body>
+
+  <a href="/">hihi</a>
 </body>
 </html>
