solved kata 8 algorithm

--- a/index1.html
+++ b/index1.html
@@ -8,23 +8,17 @@
     <title>Document</title>
 </head>
 <body>
-  <textarea name="" id="" cols="" rows="" placeholder="Demo: click inside me (or tab to me) to focus"></textarea>
-
-
-  <a href="#">Click Me</a>
-  <button>Clicked</button>
-
-  <article>
-    <p>First paragraph...</p>
-    <p>Lorem ipsum...</p>
-    <p>Dolor sit amet...</p>
-    <p>Consectetur adipisicing...</p>
-  </article>
-
-  <body>
-    <div> Let's <span class="emojify">emojify</span>this span!</div>
-  </body>
-
-  <a href="/">hihi</a>
+  <div class="long">
+    Please scroll down
+  </div>
+  <div class="sticky first">
+    এই বস্তুটার position:sticky
+  </div>
+  <div class="long">
+    Scroll Further down
+  </div>
+    <div class="long">
+    Scroll Further down
+  <div>
 </body>
 </html>
