--- a/index.html
+++ b/index.html
@@ -3,16 +3,176 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width>, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
 
-    <h1>Javascript for beginners</h1>
+    <div class="container">
+        <p>You're now viewing this example with the <span class='theme-name'>dark</span> theme!</p>
+        <button class="theme-toggle">Toggle Theme</button>
+      </div>
 
-    <div id="content">
-        <p>blah blah blah</p>
+      <form action="/" method="post">
+        <label for="name">name</label>
+        <input type="text" id="name" />
+        <label for="date">date</label>
+        <input type="date" id="date" name="date" />
+
+        <select name="Car">
+            <option value="mercedes">Mercedes</option>
+            <option value="tesla">Tesla</option>
+            <option value="volvo" selected>Volvo</option>
+            <option value="bmw">BMW</option>
+            <option value="mini">Mini</option>
+            <option value="ford">Ford</option>
+          </select>
+
+          <select name="fashion">
+            <optgroup label="Clothing">
+              <option value="t_shirt">T-Shirts</option>
+              <option value="sweater">Sweaters</option>
+              <option value="coats">Coats</option>
+            </optgroup>
+            <optgroup label="Foot Wear">
+              <option value="sneakers">Sneakers</option>
+              <option value="boots">Boots</option>
+              <option value="sandals">Sandals</option>
+            </optgroup>
+          </select>
+
+      </form>
+
+      <h1>Ticket Type</h1>
+<div>
+  <input type="radio" id="child" name="ticket_type" value="child">
+  <label for="child">Child</label>
+</div>
+
+<div>
+  <input type="radio" id="adult" name="ticket_type" value="adult">
+  <label for="adult">Adult</label>
+</div>
+
+<div>
+  <input type="radio" id="senior" name="ticket_type" value="senior" checked>
+  <label for="senior">Senior</label>
+</div>
+
+<h1>Pizza Toppings</h1>
+
+<div>
+  <input type="checkbox" id="sausage" name="topping" value="sausage">
+  <label for="sausage">Sausage</label>
+</div>
+
+<div>
+  <input type="checkbox" id="onions" name="topping" value="onions">
+  <label for="onions">Onions</label>
+</div>
+
+<div>
+  <input type="checkbox" id="pepperoni" name="topping" value="pepperoni">
+  <label for="pepperoni">Pepperoni</label>
+</div>
+
+<div>
+  <input type="checkbox" id="mushrooms" name="topping" value="mushrooms">
+  <label for="mushrooms">Mushrooms</label>
+</div>
+
+<div>
+    <input type="checkbox" id="newsletter" name="news_letter">
+    <label for="newsletter">Send me the news letter</label>
+</div>
+
+<!-- checked by defaul as page load -->
+<div>
+    <input type="checkbox" id="newsletter" name="news_letter" checked>
+    <label for="newsletter">Send me the news letter</label>
+</div>
+
+<fieldset>
+    <label for="first_name">First Name</label>
+    <input type="text" id="first_name" name="first_name">
+  
+    <label for="last_name">Last Name</label>
+    <input type="text" id="last_name" name="last_name">
+
+    <label for="email">Email</label>
+    <input type="email" id="email" name="email">
+
+    <button>submit</button>
+</fieldset>
+
+<fieldset>
+    <legend>Contact Details</legend>
+  
+    <label for="name">Name:</label>
+    <input type="text" id="name" name="name">
+  
+    <label for="phone_number">Phone Number:</label>
+    <input type="tel" id="phone_number" name="phone_number">
+  
+    <label for="email">Email:</label>
+    <input type="email" id="email" name="email">
+  </fieldset>
+  
+  <fieldset>
+    <legend>Delivery Details</legend>
+  
+    <label for="street_address">Street Address:</label>
+    <input type="text" id="street_address" name="street_address">
+  
+    <label for="city">City:</label>
+    <input type="text" id="city" name="city">
+  
+    <label for="zip_code">Zip Code:</label>
+    <input type="text" id="zip_code" name="zip_code">
+  </fieldset>
+
+  <fieldset>
+    <legend>What would you like to drink?</legend>
+  
+    <div>
+      <input type="radio" name="drink" id="coffee" value="coffee">
+      <label for="coffee">Coffee</label>
     </div>
+  
+    <div>
+      <input type="radio" name="drink" id="tea" value="tea">
+      <label for="tea">Tea</label>
+    </div>
+  
+    <div>
+      <input type="radio" name="drink" id="soda" value="soda">
+      <label for="soda">Soda</label>
+    </div>
+  
+  </fieldset>
+
+  <form action="/my-handling-form-page" method="post">
+    <ul>
+      <li>
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="user_name" />
+      </li>
+      <li>
+        <label for="mail">Email:</label>
+        <input type="email" id="mail" name="user_email" />
+      </li>
+      <li>
+        <label for="msg">Message:</label>
+        <textarea id="msg" name="user_message"></textarea>
+      </li>
+    </ul>
+  </form>
+
+  
+
+
+
     <script src="test.js">
         
     </script>
