--- a/index1.html
+++ b/index1.html
@@ -4,21 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style1.css">
     <title>Document</title>
 </head>
 <body>
-  <div class="long">
-    Please scroll down
+  <div class="grid-container">
+    <div class="card"></div>
+    <div class="card"></div>
+    <div class="card"></div>
+    <div class="card"></div>
+    <div class="card"></div>
+    <div class="card"></div> 
   </div>
-  <div class="sticky first">
-    এই বস্তুটার position:sticky
-  </div>
-  <div class="long">
-    Scroll Further down
-  </div>
-    <div class="long">
-    Scroll Further down
-  <div>
 </body>
 </html>
