--- a/index1.html
+++ b/index1.html
@@ -16,5 +16,12 @@
     <div class="card"></div>
     <div class="card"></div> 
   </div>
+
+  <div class="container">
+    <div>Item 1</div>
+    <div>Item 2</div>
+    <div>Item 3</div>
+    <div>Item 4</div>
+  </div>
 </body>
 </html>
